--- a/Lands2/Lands2/Resources/Resource.es.resx
+++ b/Lands2/Lands2/Resources/Resource.es.resx
@@ -129,6 +129,9 @@
   <data name="Error" xml:space="preserve">
     <value>Error</value>
   </data>
+  <data name="Menu" xml:space="preserve">
+    <value>Menú</value>
+  </data>
   <data name="Rememberme" xml:space="preserve">
     <value>Recordarme en este dispositivo.</value>
   </data>
