--- a/Lands2/Lands2/Resources/Resource.pt.resx
+++ b/Lands2/Lands2/Resources/Resource.pt.resx
@@ -129,6 +129,9 @@
   <data name="Error" xml:space="preserve">
     <value>Erro</value>
   </data>
+  <data name="Menu" xml:space="preserve">
+    <value>Menu</value>
+  </data>
   <data name="Rememberme" xml:space="preserve">
     <value>Lembre-se de mim neste dispositivo.</value>
   </data>
