--- a/Lands2/Lands2/Resources/Resource.pt.resx
+++ b/Lands2/Lands2/Resources/Resource.pt.resx
@@ -144,4 +144,88 @@
   <data name="Statistics" xml:space="preserve">
     <value>Estadísticas</value>
   </data>
+  <data name="RegisterTitle" xml:space="preserve">
+    <value>Registre Novo Usuário</value>
+  </data>
+  <data name="ChangeImage" xml:space="preserve">
+    <value>Toque a imagem para alterá-la.</value>
+  </data>
+  <data name="FirstNameLabel" xml:space="preserve">
+    <value>Nomes</value>
+  </data>
+  <data name="FirstNamePlaceHolder" xml:space="preserve">
+    <value>Digite os nomes...</value>
+  </data>
+  <data name="FirstNameValidation" xml:space="preserve">
+    <value>Você deve digitar o nome(s)</value>
+  </data>
+  <data name="LastNameLabel" xml:space="preserve">
+    <value>Sobrenome</value>
+  </data>
+  <data name="LastNamePlaceHolder" xml:space="preserve">
+    <value>Insira sobrenomes...</value>
+  </data>
+  <data name="LastNameValidation" xml:space="preserve">
+    <value>Você deve inserir o sobrenome(s).</value>
+  </data>
+  <data name="PhoneLabel" xml:space="preserve">
+    <value>Teléfono</value>
+  </data>
+  <data name="PhonePlaceHolder" xml:space="preserve">
+    <value>Digite o telefone...</value>
+  </data>
+  <data name="PhoneValidation" xml:space="preserve">
+    <value>Você deve inserir um telefone.</value>
+  </data>
+  <data name="ConfirmLabel" xml:space="preserve">
+    <value>Confirmação</value>
+  </data>
+  <data name="ConfirmPlaceHolder" xml:space="preserve">
+    <value>Digite a confirmação da chave...</value>
+  </data>
+  <data name="ConfirmValidation" xml:space="preserve">
+    <value>Você deve digitar a confirmação da senha.</value>
+  </data>
+  <data name="EmailValidation2" xml:space="preserve">
+    <value>Você deve inserir um e-mail válido.</value>
+  </data>
+  <data name="PasswordValidation2" xml:space="preserve">
+    <value>A senha deve ter pelo menos seis (6) caracteres.</value>
+  </data>
+  <data name="ConfirmValidation2" xml:space="preserve">
+    <value>A senha e a confirmação não correspondem.</value>
+  </data>
+  <data name="UserRegisteredMessage" xml:space="preserve">
+    <value>Usuário registrado, você pode inserir com este e-mail e senha atribuída.</value>
+  </data>
+  <data name="SourceImageQuestion" xml:space="preserve">
+    <value>De onde você quer tirar a foto?</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="FromGallery" xml:space="preserve">
+    <value>Da galeria</value>
+  </data>
+  <data name="FromCamera" xml:space="preserve">
+    <value>Da câmera</value>
+  </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="EMail" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="PasswordPlaceHolder" xml:space="preserve">
+    <value>Write your password</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Register</value>
+  </data>
+  <data name="PasswordValidation" xml:space="preserve">
+    <value>Validate password</value>
+  </data>
 </root>
