--- a/Lands2/Lands2/Resources/Resource.resx
+++ b/Lands2/Lands2/Resources/Resource.resx
@@ -148,7 +148,7 @@
     <value>Register New User</value>
   </data>
   <data name="ChangeImage" xml:space="preserve">
-    <value>Touch the image to chage it</value>
+    <value>Touch the image to change it</value>
   </data>
   <data name="FirstNameLabel" xml:space="preserve">
     <value>First Name</value>
